Remove test scripts which don't exist

--- a/config/test/mappings.yml
+++ b/config/test/mappings.yml
@@ -19,32 +19,22 @@ general:
 
   perl: [
             ['scripts/backup_documents.pl',           'pathdev_bin'   ], 
-            ['scripts/generate_config_files.pl',      'pathdev_bin'   ], 
             ['scripts/populate_organisms.pl',         'pathdev_bin'   ],
             ['scripts/rt_report',                     'pathdev_bin'   ],
             ['scripts/update_lustre_ref_genomes.pl',  'pathdev_bin'   ],
-            ['scripts/update_pathtrack_irods.pl',     'pathdev_bin'   ],
-            ['scripts/update_software.pl',            'pathdev_bin'   ],
             ['scripts/check_lustre.pl',               'pathdev_bin'   ],
             ['scripts/fetch_references.pl',           'pathdev_bin'   ],
             ['scripts/list_used_references.pl',       'pathdev_bin'   ],
-            ['scripts/list_acc_for_lanes.pl',         'pathdev_bin'   ],
             ['scripts/reads_analysis.pl',             'pathdev_bin'   ],
-            ['scripts/scaffolder',                    'pathdev_bin'   ],
             ['scripts/set_orgprops.pl',               'pathdev_bin'   ],
-            ['scripts/update_pathtrack.pl',           'pathdev_bin'   ],       
             ['scripts/check_aux_files.pl',            'pathdev_bin'   ],    
             ['scripts/ena_submissions_update.pl',     'pathdev_bin'   ],
             ['scripts/generate_project_pages.pl',     'pathdev_bin'   ],
             ['scripts/update_species_table.pl',       'pathdev_bin'   ],
-            ['scripts/pathfind',                      'production_bin'],
-            ['scripts/plexfind',                      'production_bin'],
             ['scripts/bigger_blast.pl',               'production_bin'],
             ['scripts/flexi_blast.pl',                'production_bin'],
             ['scripts/fasta_chunker.pl',              'production_bin'],
             ['scripts/blast_formatter.pl',            'production_bin'],
-            ['scripts/rfam_scan.pl',                  'production_bin'],
-            ['scripts/abacas.pl',                     'production_bin'],
             ['scripts/big_blast.pl',                  'production_bin'],
             ['scripts/sequenceformat.converter.pl',   'production_bin'],
             ['scripts/embl_to_ps.pl',                 'production_bin'],
@@ -65,26 +55,22 @@ general:
             ['scripts/omcl2genedb.pl',                'production_bin'],
             ['modules/GoogleDocument.pm',             'production_lib'],  
             ['modules/GoogleDocumentHelper.pm',       'production_lib'],
-            ['scripts/contigs2fas.pl',                'production_bin'],
-            ['scripts/validate_embl.pl',              'production_bin']
+            ['scripts/contigs2fas.pl',                'production_bin']
         ]
   java: [ ["googlecode.jar", "production_java"] ]
 
   shell: [
             ['scripts/update_tracking_databases.sh',       'pathdev_bin'   ],
             ['scripts/wtsi_chado_privs.ksh',               'pathdev_bin'   ],
-            ['scripts/load_organisms.sh',                  'pathdev_bin'   ],
             ['scripts/setup_pathpipe_environment.sh',      'pathdev_bin'   ],
             ['scripts/concatgff.sh',      		   'pathdev_bin'   ],
             ['scripts/tmhmm_chado',                        'production_bin'],
             ['scripts/writedb_entry',                      'production_bin'],
             ['scripts/chado_dump_transcripts',             'production_bin'],
-            ['scripts/iprscan_chado',                      'production_bin'],
             ['scripts/art_act_launcher',                   'production_bin'],
             ['scripts/tmhmm_chado',                        'production_bin'],
             ['scripts/pfamscan_chado',                     'production_bin'],
             ['scripts/chado_dump_proteins',                'production_bin'],
-            ['scripts/iprscan',                            'production_bin'],
             ['scripts/pmid_extraction',                    'production_bin'],
             ['scripts/dnaplotter',                         'production_bin'],
             ['scripts/art',                                'production_bin'],
