Added filter_for_reago.sh script to prod bin

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -227,7 +227,8 @@ general:
       [ 'scripts/backup_midas_audit_logs.sh',         'pathdev_bin' ],
       [ 'scripts/phylosift',                          'production_bin' ],
       [ 'scripts/run_canu.sh',                        'production_bin' ],
-      [ 'scripts/pf.conf',                            'production_etc' ]
+      [ 'scripts/pf.conf',                            'production_etc' ],
+      [ 'scripts/filter_for_reago.sh',                'production_bin' ]
   ]
   splimer: [ [ 'splimer.pl', 'production_bin' ], [ 'modules/FastaLength.pm', 'production_lib' ],
   ]
