--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -233,6 +233,7 @@ general:
       [ 'scripts/05_simplify',                        'production_bin' ],   
       [ 'scripts/06_scaffolding',                     'production_bin' ],
       [ 'scripts/rapmap',                             'production_bin' ],
+      [ 'scripts/runMetaBat.sh',                      'production_bin' ],
       [ 'scripts/beast1.8',                           'production_bin' ],
       [ 'scripts/pf.conf',                            'production_etc' ],
       [ 'scripts/monitor_accounts_cron.sh',           'pathdev_bin'],
