--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -18,6 +18,8 @@ general:
       [ 'scripts/fastn_split.py',                  'production_bin' ],
       [ 'scripts/get_sequencing_project_pages.py', 'production_bin' ],
       [ 'scripts/snp_sites_plink_files.py',        'production_bin' ],
+      [ 'scripts/get_annot_changes_list',          'production_bin' ],
+      [ 'scripts/push_gffdump_to_ftp.py',          'production_bin' ],
       [ 'modules/wikipy.py',                       'production_lib' ],
       [ 'modules/util',                            'production_lib' ],
       [ 'modules/gffminimal',                      'production_lib' ],
