--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -240,7 +240,8 @@ general:
       [ 'scripts/monitor_accounts_cron.sh',           'pathdev_bin'],
       [ 'scripts/filter_for_reago.sh',                'production_bin' ],
       [ 'scripts/mrbayes',                            'production_bin' ],
-      [ 'scripts/recycle.py',                         'production_bin' ]
+      [ 'scripts/recycle.py',                         'production_bin' ],
+      [ 'scripts/pilon',                              'production_bin' ]
   ]
   splimer: [ [ 'splimer.pl', 'production_bin' ], [ 'modules/FastaLength.pm', 'production_lib' ],
   ]
