--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -149,6 +149,7 @@ general:
       [ 'scripts/extract_modifications_to_plots',                    'production_bin' ],
       [ 'scripts/get_library_type.pl',                               'production_bin' ],
       [ 'scripts/repeat_finder.pl',                                  'production_bin' ],
+      [ 'scripts/het_snp_calculator.pl',                             'production_bin' ],
   ]
 
   java: [
