update artemis script location

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -255,7 +255,7 @@ general:
       [ 'scripts/pilon',                              'production_bin' ],
       [ 'scripts/atlas',                              'production_bin' ],
       [ 'scripts/genedb_dump_database_upload_to_ftp', 'production_bin' ],
-      [ 'scripts/prepare_artemis_release.sh',         'pahdev_bin'],
+      [ 'scripts/prepare_artemis_release.sh',         'pathdev_bin'],
       [ 'scripts/shovill',                              'production_bin' ]
   ]
   splimer: [ [ 'splimer.pl', 'production_bin' ], [ 'modules/FastaLength.pm', 'production_lib' ],
