--- a/config/production/global.yml
+++ b/config/production/global.yml
@@ -1,6 +1,6 @@
 general:
   repository:
-    url: 'git+ssh://git.internal.sanger.ac.uk/repos/git/pathogens/general.git'
+    url: 'git@gitlab.internal.sanger.ac.uk:sanger-pathogens/general.git'
     branch: 'master'
   directories_to_build: ['java','perl','python','shell','c','lua','splimer','r','data']
 
