--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -260,7 +260,8 @@ general:
       [ 'scripts/shovill',                            'production_bin' ],
       [ 'scripts/strainphlan.py',                     'production_bin' ],
       [ 'scripts/Trinity',                            'production_bin' ],
-      [ 'scripts/unicycler',                          'production_bin']
+      [ 'scripts/unicycler',                          'production_bin' ],
+      [ 'scripts/tracer.conf',                          'production_bin' ]
   ]
   splimer: [ [ 'splimer.pl', 'production_bin' ], [ 'modules/FastaLength.pm', 'production_lib' ],
   ]
