--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -261,7 +261,8 @@ general:
       [ 'scripts/strainphlan.py',                     'production_bin' ],
       [ 'scripts/Trinity',                            'production_bin' ],
       [ 'scripts/unicycler',                          'production_bin' ],
-      [ 'scripts/tracer.conf',                          'production_bin' ]
+      [ 'scripts/download_ariba_databases.sh',        'production_bin' ],
+      [ 'scripts/tracer.conf',                        'production_bin' ]
   ]
   splimer: [ [ 'splimer.pl', 'production_bin' ], [ 'modules/FastaLength.pm', 'production_lib' ],
   ]
