--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -262,6 +262,7 @@ general:
       [ 'scripts/Trinity',                            'production_bin' ],
       [ 'scripts/unicycler',                          'production_bin' ],
       [ 'scripts/download_ariba_databases.sh',        'production_bin' ],
+      [ 'scripts/update_all_reference_from_refseq_in_tracking_dbs.sh', 'pathdev_bin'],
       [ 'scripts/tracer.conf',                        'production_bin' ]
   ]
   splimer: [ [ 'splimer.pl', 'production_bin' ], [ 'modules/FastaLength.pm', 'production_lib' ],
