--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -265,7 +265,8 @@ general:
       [ 'scripts/update_all_reference_from_refseq_in_tracking_dbs.sh', 'pathdev_bin'],
       [ 'scripts/tracer.conf',                        'production_bin' ],
       [ 'scripts/brig',                               'production_bin' ],
-      [ 'scripts/setup_seroba_dbs.sh',                'pathdev_bin' ]
+      [ 'scripts/setup_seroba_dbs.sh',                'pathdev_bin' ],
+      [ 'scripts/mashmap',                            'production_bin' ]
   ]
   splimer: [ [ 'splimer.pl', 'production_bin' ], [ 'modules/FastaLength.pm', 'production_lib' ],
   ]
